<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".before_login.ChangePasswordActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/ic_launcher_background"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="1.3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_ios_24"
                android:contentDescription="@string/back_desc"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_gravity="start"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changePw_title"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_marginStart="32dp"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/changeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/big_title_chanePw"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/changeDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal"
            android:text="Enter a new password below to change \nyour pasword"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeTitle" />

        <!--    Current Password    -->
        <TextView
            android:id="@+id/currentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:alpha="1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/current_password_text"
            android:layout_marginStart="-4dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeDesc"
            tools:alpha="100" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwCurrent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentTextView"
            app:endIconMode="password_toggle"
            android:alpha="1"
            android:layout_marginBottom="32dp"
            tools:alpha="100"
            android:hint="@string/current_password_hint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_pwcurrent"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/rounded_shape"
                android:textColor="@color/black"
                android:textSize="18sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!--    New Password    -->
        <TextView
            android:id="@+id/pwTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:alpha="1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/new_password_text"
            android:layout_marginStart="-7dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwCurrent"
            tools:alpha="100" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newpwEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwTextView"
            app:endIconMode="password_toggle"
            android:alpha="1"
            android:layout_marginBottom="32dp"
            tools:alpha="100"
            android:hint="@string/new_password_hint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_pw"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/rounded_shape"
                android:textColor="@color/black"
                android:textSize="18sp"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <!--    Retype Password    -->
        <TextView
            android:id="@+id/pwRetypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:alpha="1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/retype_password_text"
            android:layout_marginStart="-5dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newpwEditTextLayout"
            tools:alpha="100" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwRetype"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwRetypeTextView"
            app:endIconMode="password_toggle"
            android:alpha="1"
            android:layout_marginBottom="32dp"
            tools:alpha="100"
            android:hint="@string/retype_password_hint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_retypepw"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/rounded_shape"
                android:textColor="@color/black"
                android:textSize="18sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="120dp"
            android:id="@+id/pwChange"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/change_password_text"
            android:textSize="14sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textAllCaps="false"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwRetype"
            app:layout_constraintVertical_bias="1.0"
            android:background="@drawable/btn_primary"/>

        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="58dp"
            android:layout_height="74dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.675"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>